# simLIBS

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  data.csv  output.csv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: python-publish.yml  test.yml
SimualtedLIBS/: Simulated_LIBS.py
SimualtedLIBS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SimulatedLIBS/: SimulatedLIBS.py  Simulated_LIBS.py  __init__.py  animation.py  out_put.csv  simulation.py
SimulatedLIBS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SimulatedLIBS/animations/: animation.py
docs/: libs-dataset.ipynb  output.csv  single-spectra.ipynb  single_simulation.csv
examples/: plot_example.py
libs/: Simulated_LIBS.py
libs.egg-info/: PKG-INFO  SOURCES.txt
simLIBS/: __init__.py  animation.py  simulation.py
tests/: data.csv  test_SimulatedLIBS.py
