[metadata]
name = simLIBS
author = Marcin Kastek
author_email = marcin.kastek@ifpilm.pl
description= SimulatedLIBS provides simple Python class to simulate LIBS spectra with NIST LIBS Database interface
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
platfroms = unix, win32
url = https://github.com/MKastek/simLIBS
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = SimulatedLIBS
python_requires = >=3.8
install_requires =
    pandas
    numpy
    matplotlib
    requests
    bs4
    scipy
    selenium
    webdriver-manager

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 3.9
    tox >= 3.24

[options.package_data]
SimulatedLIBS = py.typed

[flake8]
max-line-length = 160
